fixing map height on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -305,7 +305,7 @@ svg{
     display: block;
     position: relative;
     width: auto;
-    height: 75vh;
+    height: 65vh;
     margin: auto;
     z-index: 1;
     border: none;
@@ -314,7 +314,7 @@ svg{
   }
   svg{
     width: auto;
-    height: 70vh;
+    height: 60vh;
     margin: auto;
     padding-right: 40px;
     position: relative;
